--- a/index.html
+++ b/index.html
@@ -76,20 +76,54 @@
             </div>
 
             <div class="container col-lg-5 col-md-6 col-sm-12">
-                <h3>O zbirki</h3>
-            </div>
-            <!-- <div style="padding: 50px; float: left; width: 50%;">
-                <img src="img/insert.png" style="width: 400px; height: 400px;">
-                <img src="img/insert.png" style="width: 400px; height: 400px;">
+                <h3>Zbirka geodetskih instrumentov na UL FGG</h3>
                 <br>
-                <img src="img/insert.png" style="width: 400px; height: 400px;">
-                <img src="img/insert.png" style="width: 400px; height: 400px;">
+                <p>
+                    Oddelek za geodezijo na Fakulteti za gradbeništvo in geodezijo Univerze v Ljubljani (UL FGG) hrani
+                    zbirko geodetskih instrumentov, ki obsega več kot 100 muzejskih predmetov. 72 instrumentov je
+                    razstavljenih, ostali pa so na fakulteti deponirani.
+                </p>
+                <p>
+                    Zbirko je ob pomoči mag. Janeza Goršiča sestavil in sistematično uredil izr. prof. dr. Dušan Kogoj, ki je
+                    tudi njen skrbnik. Predmeti so vzorno popisani. Instrumenti izvirajo iz obdobja od sredine 19. stoletja
+                    do začetka 21. stoletja. Za posamezne predvsem starejše geodetske instrumente zgodovina nakupa
+                    in podrobnosti uporabe niso znani, večina instrumentov pa je povezanih s pedagoškim delom v
+                    okviru študija geodezije na Univerzi v Ljubljani. Več kot polovica instrumentov v zbirki je bilo
+                    obnovljenih, nekateri najstarejši so popolnoma restavrirani. Obsežno in natančno delo je opravil
+                    gospod Rudi Vidic, ki se je še v času 30-letnega službovanja v podjetju Kern specializiral za to delo.
+                </p>
+                <p>
+                    V letu 2019 je Tehnični muzej Slovenije (TMS) s pomočjo mag. Martine Orehovec, muzejske
+                    svetovalke, kustosinje in skrbnice Slovenske geodetske zbirke na gradu Bogenšperk in na pobudo izr.
+                    prof. dr. Dušana Kogoja evidentiral zbirko geodetskih instrumentov Oddelka za geodezijo UL FGG.
+                    TMS je predmete vpisal v svoje evidence (podatkovna zbirka Kronos). Tako je zbirka vključena v
+                    evidenco nacionalnega muzeja, ki je matičen za zbirke s področja znanosti in tehnike v Republiki
+                    Sloveniji.
+                </p>
+                <p>
+                    Instrumenti so razstavljeni v vitrinah na hodniku Oddelka za geodezijo UL FGG na Jamovi cesti 2 v
+                    Ljubljani (IV. nadstropje) in si jih je mogoče prosto ogledati.
+                </p>
             </div>
-    
-            <div style="padding: 50px; float: right; width: 50%;">
-                <h2>Citati/misli</h2>
-                <h3>...</h3>
-            </div> -->
+            <br>
+            <div class="container col-lg-5 col-md-6 col-sm-12">
+                <h3>Opisi instrumentov</h3>
+                <br>
+                <p>
+                    Opisi geodetskih instrumentov so nastali v okviru magistrske naloge Dominika Mlakarja. Vse
+                    priložene slike so iz lastnega vira. Pri popisu smo vsak instrument pregledali, ocenili njegovo stanje in
+                    spoznali njegovo delovanje. Opis instrumenta obsega navedbo njegovih tehničnih lastnosti.
+                    Pomembnejši instrumenti so opisani podrobneje. Nekatere podatke smo pridobili iz dodatnih virov.
+                </p>
+                <p>
+                    Instrumenti so razdeljeni na štiri glavne vrste terestričnih geodetskih instrumentov in sicer: teodoliti,
+                    nivelirji, tahimetri in razdaljemeri. Dodani sta skupini sekstanti in topografske garniture oziroma
+                    kipregli. Instrumenti so zbrani v skupine po proizvajalcih. Proizvajalci so urejeni po abecednem
+                    vrstnem redu. Dodani so iz magistrske naloge povzeti kratki opisi proizvajalcev. Posamezni
+                    instrumenti v skupini so razvrščeni po letih zdelave oziroma serijskih številkah.
+                </p>
+            </div>
+            <br>
         </div>
     </body>
 </html>
